--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,10 +28,15 @@ body {
 body{
     min-height: 100vh;
     font-family: 'Open Sans', sans-serif;
-    background: linear-gradient(to right, #C4B5FD, #D8B4FE, #F0ABFC);
+    background-image: url('/macBgOneV2.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:cover;
+    background-attachment: fixed;
+    /* background: linear-gradient(to right, #C4B5FD, #D8B4FE, #F0ABFC);
     background: #c6ffdd;
     background: -webkit-linear-gradient(to right, #c6ffdd, #fbd786, #f7797d);
-    background: linear-gradient(to right, #c6ffdd, #fbd786, #f7797d); 
+    background: linear-gradient(to right, #c6ffdd, #fbd786, #f7797d);  */
 }
 
 .font-cursive{
