🚀 [feature: RESEARCH_PULSE]: Integrating Ketcher Chemistry Drawing Board!

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,13 +20,11 @@
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-body {
+html, body{
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;     /* Firefox */
-}
-
-body{
     min-height: 100vh;
+    width: 100%;
     font-family: 'Open Sans', sans-serif;
     background-image: url('/macBgOneV2.jpg');
     background-repeat: no-repeat;
