--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -24,27 +24,34 @@
 html, body{
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;     /* Firefox */
+
     min-height: 100vh;
     width: 100%;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', 'Montserrat' sans-serif;
+
+    /* Bug: Font seems more bolder on browser... */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+
     background-image: url('/macBgOneV2.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size:cover;
     background-attachment: fixed;
+
     /* background: linear-gradient(to right, #C4B5FD, #D8B4FE, #F0ABFC);
     background: #c6ffdd;
     background: -webkit-linear-gradient(to right, #c6ffdd, #fbd786, #f7797d);
     background: linear-gradient(to right, #c6ffdd, #fbd786, #f7797d);  */
-}
+    }
 
 .font-cursive{
     font-family: 'Playwrite CU', cursive;
 }
 
 .font-heading{
-    font-family: 'Montserrat', 'Open Sans', sans-serif;
-    font-weight: 700;
+    font-family: 'Roboto', 'Open Sans', 'Montserrat', sans-serif;
 }
 
 .title-card{
