--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,10 @@
     display: none;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 /* Hide scrollbar for IE, Edge and Firefox */
 html, body{
     -ms-overflow-style: none;  /* IE and Edge */
