--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,11 +73,11 @@ html, body{
       
       /* Chemical equations and special formatting */
       & pre {
-        @apply my-4 p-4 bg-gray-50 rounded-lg overflow-x-auto whitespace-pre-wrap break-words;
+        @apply my-2 p-2 bg-gray-50 rounded-lg overflow-x-auto whitespace-pre-wrap break-words;
       }
       
       & code {
-        @apply font-mono text-sm;
+        @apply font-sans text-sm;
       }
       
       /* Tables for chemical data */
@@ -95,7 +95,7 @@ html, body{
       
       /* Block quotes for important notes */
       & blockquote {
-        @apply pl-4 border-l-4 border-purple-300 my-4 italic;
+        @apply pl-2 border-l-4 border-purple-300 my-2 italic;
       }
       
       /* Special formatting for chemical names */
@@ -105,7 +105,8 @@ html, body{
       
       /* Section breaks */
       & hr {
-        @apply my-8 border-t-2 border-purple-100;
+        @apply my-4 border-t-2 border-purple-100;
       }
     }
   }
+
